# rustysozluk

./: .gitattributes  .gitignore  Cargo.toml  LICENCE.md  README.md  index.html
docs/: all.html  fn.fetch_title.html  fn.fetch_user.html
docs/parser/: fn.fetch_title.html  fn.fetch_user.html
docs/rustysozluk/: fn.fetch_page.html  index.html  sidebar-items.js
docs/rustysozluk/http_client/: fn.fetch_page.html
examples/: analyze.rs  analyze2.rs  exporter.rs  from_title.rs  from_user.rs  sentiment_title.rs  sentiment_user.rs
files/: SWNetTR.csv
src/: exporter.rs  http_client.rs  lib.rs  parser.rs
src/analyzer/: analyzer.rs  mod.rs
