[package]
name = "rustysozluk"
version = "0.1.1"
edition = "2021"
authors = ["altunenes <enesaltun2@gmail.com>"]
description = "Eksi Sozluk API wrapper"
license = "MIT"
rust-version = "1.71.0"
homepage = "https://github.com/altunenes/rustysozluk"
documentation = "https://docs.rs/rustysozluk/0.1.0/rustysozluk/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
reqwest = { version = "0.11.20", features = ["json", "async-compression"] }
scraper = "0.17.1"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
